// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article text should say 'Article text' 1`] = `
<div>
  <div
    class="title-article"
  >
    <h2
      class="title-article__header"
    />
    <p
      class="title-article__text"
    >
       
      Article text
    </p>
  </div>
</div>
`;

exports[`Header title is 'Our Instruments' 1`] = `
<div>
  <div
    class="title-article"
  >
    <h2
      class="title-article__header"
    >
      Our Instruments
    </h2>
    <p
      class="title-article__text"
    >
       
    </p>
  </div>
</div>
`;

exports[`Renders TitleArticle component 1`] = `
<div>
  <div
    class="title-article"
  >
    <h2
      class="title-article__header"
    />
    <p
      class="title-article__text"
    >
       
    </p>
  </div>
</div>
`;
